judger/judger_cpp/tmp/539c52c6-37e5-4616-8174-f2197ec99227txt
c:\Users\haohan\Desktop\myoj\judger\judger_cpp\tmp\88cf5b65-9314-4fb2-9d8b-9ab6c9fe82ff.cpp:1:1: error: 'ff' does not name a type
 ff
 ^
